# recsys-pipeline

./: .gitignore  CLAUDE.md  Makefile  README.ko.md  README.md  go.work
configs/: local.env.example
docs/superpowers/plans/: 2026-03-18-recsys-pipeline.md
infra/: docker-compose.yml
infra/docker/: event-collector.Dockerfile  ranking-service.Dockerfile  recommendation-api.Dockerfile  stream-processor.Dockerfile
infra/envoy/: envoy.yaml
infra/helm/: Chart.yaml  values.yaml
infra/monitoring/: alertmanager.yml  prometheus.yml
load-tests/: bench.go  cdn-bypass-worst-case.js  inventory-stress.js  local-benchmark.js  ramp-up.js  tier-distribution.js
load-tests/chaos/: run-all.sh  tc01-dragonfly-failover.yaml  tc02-triton-failure.yaml  tc03-redpanda-partition.yaml  tc04-network-latency.yaml  tc05-traffic-spike.yaml  tc06-stock-flood.yaml
ml/: pyproject.toml
ml/models/dcn_v2/: __init__.py  model.py  test_model.py  train.py
ml/models/two_tower/: __init__.py  model.py  test_model.py  train.py
ml/serving/: export_onnx.py  test_export_onnx.py
scripts/: verify-e2e.sh
services/batch-processor/: pyproject.toml
services/batch-processor/dags/: daily_full.py  incremental_4h.py
services/batch-processor/src/batch_processor/: __init__.py  embeddings.py  features.py  precompute.py
services/batch-processor/tests/: test_features.py  test_precompute.py
services/event-collector/: go.mod  go.sum
services/recommendation-api/: go.mod  go.sum
services/stream-processor/: build.gradle.kts
services/traffic-simulator/: go.mod
shared/go/: go.mod
(+86 files in other folders)
