[project]
name = "recsys-ml"
version = "0.1.0"
description = "ML models for recommendation pipeline: Two-Tower & DCN-V2"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "onnx>=1.14",
    "mlflow>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["models", "serving"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
