[project]
name = "batch-processor"
version = "0.1.0"
description = "Batch processor: Spark feature engineering, embedding generation, and pre-compute pipeline"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.5",
    "redis>=5.0",
    "pymilvus>=2.3",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
